--- a/Controller/index.htm
+++ b/Controller/index.htm
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="Images/logo.png"  class="logo">
+            <img src="logo.png"  class="logo">
             <nav>
                 <ul id="menuList">
                     <li><a href="#">Game controllers</a></li>
@@ -28,21 +28,21 @@
                 <h3>Wireless Controller for PlayStation 4</h3>
                 <p>(Compatible\Gneric)</p>
                 <h4>$32.50</h4>
-                <button>Buy Now<img src="Images/arrow.png" ></button>
+                <button>Buy Now<img src="arrow.png" ></button>
             </div>
             <div class="col-2">
-                <img src="Images/controller.png" class="controller">
+                <img src="controller.png" class="controller">
                 <div class="color-box"></div>
                 <div class="add-btn">
-                    <img src="Images/add.png">
+                    <img src="add.png">
                     <p><small>Add to cart</small></p>
                 </div>
             </div>
         </div>
         <div class="social-links">
-            <img src="Images/fb.png">
-            <img src="Images/tw.png">
-            <img src="Images/ig.png">
+            <img src="fb.png">
+            <img src="/tw.png">
+            <img src="ig.png">
         </div>
     </div>
     <script>
